-------------------------------------
	4.2-5
-------------------------------------
More details pane redraw fixes when VM selection list changes
while VM data is still loading

Fixed multiple IE8 bugs that affected selecting and removing VMs

-------------------------------------
	4.2-4	2012-11-02
-------------------------------------
Fixed details pane redraws when VM selection list changes while VM
data is still loading

Added VM group tooltips

Fixed bug that would not display the first VM added to VirtualBox
when there were no other VMs until the page was refreshed

Fixed bug that would not allow attachment of USB devices from the
Settings menu

Cleaned up snapshot logic and snapshot list UI

Taking a snapshot of a running VM now automatically pauses the VM
to take the snapshot and resumes it once the snapshot has been
taken

Minor look and feel changes to more closely match the VirtualBox
GUI

Added First Run wizard

Major rewrite of AJAX data <-> vboxwebsrv back-end interaction

PHP session support is no longer required and AJAX requests should
be a little more responsive

Fixed bug that would not save DHCP server settings of host-only
network interfaces

Fixed bug in Clone Virtual Machine wizard that would not create a
full clone when in 'Expert' (Hide Description) mode

Reintroduced the Stop button in place of the Discard button in the
main window toolbar

Cleaned up wizards to perform expected actions when pressing Enter

vboxinit now reads VBOX_BIN_PATH if set in /etc/default/virtualbox
and adds it to the PATH environment variable
http://code.google.com/p/phpvirtualbox/issues/detail?id=616

If multiple servers are configured, progress operation rows now
contain the server's name on which the operation was performed
http://code.google.com/p/phpvirtualbox/issues/detail?id=617

Fixed bug in IE8 that would prevent opening a detached console
window for any VM that has a space in its name

-------------------------------------
	4.2-3b	2012-10-21